--- a/README
+++ b/README
@@ -10,5 +10,7 @@ the two other are just 'simple' shortcuts
 
 Problems now: 
     1- retrieving the current proper states of the two first buttons (KRun::runCommand  doesn't seem appropriate for this)
-    2- panel background color
+    2- proper updating of the buttons images when clicked (doesn't work now)
+    3- panel background color
+    4- using something else than classic buttons (seticon ?..)
 To do: detecting update-manager icon in systray when updates are availables.
