--- a/README
+++ b/README
@@ -9,8 +9,7 @@ the first two actions buttons are meant to have off/on states, depending on the 
 the two other are just 'simple' shortcuts
 
 Problems now: 
-    1- retrieving the current proper states of the two first buttons (KRun::runCommand  doesn't seem appropriate for this)
-    2- proper updating of the buttons images when clicked (doesn't work now)
-    3- panel background color
-    4- using something else than classic buttons (seticon ?..)
+     - proper updating of the buttons images when clicked (doesn't work now)
+     - panel background color
+     - using something else than classic buttons (seticon ?..)
 To do: detecting update-manager icon in systray when updates are availables.
