--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-!!! WORK in Progress - unfinished, not usuable now.
-
+!!! WORK in Progress - "usuable", need some polishing (see problems below)
 testing: compile project
 copy libraries / .desktop files to proper locations
 create /opt/trinity/share/apps/actioncenter_applet folder and copy assets to it + make the scripts executables.
@@ -12,4 +11,4 @@ Problems now:
      - proper updating of the buttons images when clicked (doesn't work now)
      - panel background color
      - using something else than classic buttons (seticon ?..)
-To do: detecting update-manager icon in systray when updates are availables.
+To do: detecting update-manager icon in systray when updates are availables (notif.sh)
